:arrow_up: Upgrade Quarkus to v1.4.1.Final