@@ -24,23 +24,22 @@ public class WorkspaceService {
                                      String projectArtifactId,
                                      String projectVersion) throws Exception {
 
-        Path buildPath = Files.createTempDirectory("liferayWorkspaces--");
-        String workspaceName = projectArtifactId.isEmpty() ? getWorkspaceName(tool, version) : projectArtifactId;
+        var buildPath = Files.createTempDirectory("liferayWorkspaces--");
+        var workspaceName = projectArtifactId.isEmpty() ? getWorkspaceName(tool, version) : projectArtifactId;
 
-        ProcessBuilder builder =
-                new ProcessBuilder("blade", "init", "-b", tool, "-v", version, workspaceName);
+        var builder = new ProcessBuilder("blade", "init", "-b", tool, "-v", version, workspaceName);
 
         builder.directory(buildPath.toFile());
 
-        Process process = builder.start();
-        int exitCode = process.waitFor();
+        var process = builder.start();
+        var exitCode = process.waitFor();
 
         if (exitCode != 0) {
             throw new Exception("Workspace build failed with exit code " + exitCode);
         }
 
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        Path workspacePath = buildPath.resolve(workspaceName);
+        var baos = new ByteArrayOutputStream();
+        var workspacePath = buildPath.resolve(workspaceName);
 
         if ("maven".equalsIgnoreCase(tool))
             updatePomFiles(workspacePath, projectGroupId, projectArtifactId, projectVersion);
@@ -66,12 +65,12 @@ public class WorkspaceService {
                                 String projectArtifactId,
                                 String projectVersion) throws IOException {
 
-        Path parentPom = workspacePath.resolve("pom.xml");
-        Path modulesPom = workspacePath.resolve("modules/pom.xml");
-        Path themesPom = workspacePath.resolve("themes/pom.xml");
-        Path warsPm = workspacePath.resolve("wars/pom.xml");
+        var parentPom = workspacePath.resolve("pom.xml");
+        var modulesPom = workspacePath.resolve("modules/pom.xml");
+        var themesPom = workspacePath.resolve("themes/pom.xml");
+        var warsPm = workspacePath.resolve("wars/pom.xml");
 
-        List<Path> pomPaths = Arrays.asList(parentPom, modulesPom, themesPom, warsPm);
+        var pomPaths = Arrays.asList(parentPom, modulesPom, themesPom, warsPm);
 
         for (Path pomPath : pomPaths) {
             updatePomFile(pomPath, projectGroupId, projectArtifactId, projectVersion);
@@ -83,9 +82,9 @@ public class WorkspaceService {
                                String projectArtifactId,
                                String projectVersion) throws IOException {
 
-        Charset charset = StandardCharsets.UTF_8;
+        var charset = StandardCharsets.UTF_8;
 
-        String content = new String(Files.readAllBytes(pomPath), charset);
+        var content = Files.readString(pomPath, charset);
         content = content.replaceAll("" +
                         "<groupId>" + projectArtifactId + "</groupId>",
                 "<groupId>" + projectGroupId + "</groupId>");
